# proxbeacon

./: .gitignore  README.md  justfile
init/autorun/: 98-setup.sh  99-cloudflared.sh  99-proxbeacon.sh
init/cloudflared/: cloudflared.service  config.yaml
init/proxbeacon/: proxbeacon.service
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/proxbeacon/: Cargo.toml
rust/proxbeacon/src/: main.rs
usbstick/: autorun.sh
