[package]
name = "proxbeacon"
version = "0.1.0"
edition = "2021"

[features]
default = ["windowed"]
windowed = ["slint/backend-winit"]
framebuffer = ["dep:slint-backend-linuxfb"]

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
slint = { version = "1.14", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-software",
] }
slint-backend-linuxfb = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2"
